# Lab_Report_Helper

./: .gitignore  AGENTS.md  README.md  agent.py  pyproject.toml  requirements.txt
cli/: __init__.py  cli_tui.py
docs/: architecture.md
tools/: __init__.py  read_file.py  run_command.py  run_python.py  web_search.py  write_file.py
