[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-report-agent"
version = "0.1.0"
description = "实验报告生成助手 CLI"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.0",
    "langchain-openai",
    "python-docx",
    "httpx",
    "rich",
    "pypdf",
    "openpyxl",
]

[project.scripts]
lab-report = "cli:main"

[tool.setuptools.packages.find]
include = ["cli*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]
